# cenno

./: .gitignore  AGENTS.md  AUTHORSHIP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  index.html  package-lock.json  package.json  style-dictionary.config.mjs  tsconfig.test.json  vite.config.ts
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/: CLAUDE.md
companion/: project.yml
companion/CennoCompanion.xcodeproj/: project.pbxproj
companion/CennoCompanion.xcodeproj/xcshareddata/xcschemes/: CennoRelayTest.xcscheme  CennoWatch.xcscheme  CennoiPhone.xcscheme
companion/Sources/Shared/: A2UIAnswerBridge.swift  A2UIDesugar.swift  A2UIMessageBuilder.swift  A2UIRouter.swift  CennoComponentRemap.swift  CloudKitRelay.swift  JSONValue.swift  PromptRecord.swift  PromptRouting.swift
companion/Sources/Watch/: CennoWatch.entitlements  Info.plist  PromptQueueView.swift  PromptView.swift  WatchApp.swift
companion/Sources/iPhone/: A2UIPromptView.swift  AmbientAnnouncer.swift  CennoComponentCatalog.swift  CennoTheme.swift  CennoiPhone.Release.entitlements  CennoiPhone.entitlements  DemoHarness.swift  Info.plist  PhonePromptDetailView.swift  PhonePromptQueueView.swift  PromptLayout.swift  SecondScreenSettings.swift  SecondScreenView.swift  iPhoneApp.swift
companion/Tests/CennoSharedTests/: A2UIAnswerBridgeTests.swift  A2UIDesugarTests.swift  A2UIMessageBuilderTests.swift  CennoComponentRemapTests.swift  JSONValueTests.swift  PromptPayloadDecodeTests.swift  PromptRoutingTests.swift  SmokeTest.swift
companion/Tests/CennoiPhoneUITests/: CennoRenderUITests.swift
dist-release-0.3.0/: cenno.app.tar.gz.sig  latest.json
docs/: AUDIT-2026-07.md  BACKLOG.md  CONFIG.md
docs/design/: BRAND.md  CONTROLS.md  TOKENS.md  index.html
docs/design/brand/appicon/: NOTES.md  edit-v3.json  finalize_master.py  render_appicon.py
docs/design/brand/explorations/: make_inline_variants.py  make_variants.py
docs/design/brand/gestures/: PROMPTS.md
docs/design/brand/renders/: make_inline_lockup.py
docs/design/frames/: generate.py
docs/design/frames/drafts/: fullscreen-ema-1-scale.json  fullscreen-ema-2-choice.json  fullscreen-ema-3-voice.json  fullscreen-ema-done.json  panel-choice.json  panel-expired.json  panel-free-text.json  panel-mood-checkin.json  panel-reminder.json  tokens-sheet.json  tray-history.json  tray-inbox.json
docs/design/frames/final/: fullscreen-ema-1-scale.json  fullscreen-ema-2-choice.json  fullscreen-ema-3-voice.json  fullscreen-ema-done.json  panel-choice.json  panel-expired.json  panel-free-text.json  panel-mood-checkin.json  panel-reminder.json  tokens-sheet.json  tray-history.json  tray-inbox.json
docs/design/qa/: REPORT.md
docs/examples/dot-cenno/: config.json  tokens.json
docs/factory/2026-06-22-settings-tts-model/: goal.md  plan.md
docs/factory/2026-06-22-settings-tts-model/evidence/: audit-plan-codex.md
docs/factory/2026-06-22-sound-out/: goal.md  retro.md
docs/factory/2026-06-22-supertonic-tts/: goal.md  plan.md
docs/factory/2026-06-24-panel-text-never-lost/: goal.md  retro.md
docs/factory/2026-06-24-panel-text-never-lost/evidence/: audit-codex-2.md  audit-codex.md
docs/superpowers/plans/: 2026-06-10-history-tray.md  2026-06-10-rendering-tokens.md  2026-06-10-walking-skeleton.md  2026-06-11-ask-sequence.md  2026-06-11-visual-polish.md  2026-06-13-ios-a2ui-renderer.codex-review.md  2026-06-13-ios-a2ui-renderer.md  2026-06-16-concurrent-prompt-queueing.md  2026-07-15-l0-screen-capture-security.md  2026-07-15-l1a-screen-context-ax.md  backlog.md
docs/superpowers/research/: 2026-06-a2ui-react-spike.md
docs/superpowers/specs/: 2026-06-10-cenno-design.md  2026-06-13-ios-a2ui-renderer-design.md  2026-06-15-cross-device-routing-design.md  2026-06-15-feature-factory-design.md  2026-07-15-l0-screen-capture-security.md  2026-07-15-l1a-screen-context-ax.md
docs/superpowers/test-scenarios/: 2026-07-15-l0-screen-capture-security.md  2026-07-15-l1a-screen-context-ax.md
scripts/: demo.sh  gen-release-notes.sh  release.sh  smoke.sh  validate-tokens.mjs  visual-qa.sh
site/: astro.config.mjs  package-lock.json  package.json
site/public/: deck.html  robots.txt  sitemap.xml
site/src/pages/: impressum.astro  index.astro  privacy.astro
site/src/styles/: tokens.css
skills/: README.md
skills/cenno/: SKILL.md
skills/cenno-setup/: SKILL.md
spike/a2ui/: index.html  package-lock.json  package.json
spike/a2ui/src/: App.tsx  catalog.tsx  main.tsx  messages.ts
src/: App.css  App.test.tsx  App.tsx  PromptPanel.test.tsx  PromptPanel.tsx  SettingsWindow.css  SettingsWindow.tsx  main.tsx  notedWords.test.ts  notedWords.ts  panelResize.test.ts  panelResize.ts  userConfig.test.ts  userConfig.ts  voice.test.ts  voice.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_voice_samples.rs
src-tauri/icons/: icon.icns
src-tauri/icons/tray/: tray_template_icon.py
src-tauri/src/: a2ui_guard.rs  bridge.rs  capture_guard.rs  cli.rs  config.rs  db.rs  generation.rs  lib.rs  main.rs  mcp.rs  protocol.rs  registry.rs  relay.rs  routing.rs  screen_context.rs  suppress.rs  tray.rs  tts.rs  updater.rs  voice.rs
src-tauri/src/supertonic/: mod.rs
src-tauri/swift/: Package.swift
src-tauri/swift/Sources/CennoRelay/: CennoRelay.swift
src-tauri/swift/Sources/CennoScreenContext/: CennoScreenContext.swift
src-tauri/swift/Sources/CennoVoice/: CennoTts.swift  CennoVoice.swift
src-tauri/swift/Tests/CennoScreenContextTests/: CennoScreenContextTests.swift
src-tauri/tests/: live_socket_probe.rs  mcp_socket.rs
src/a2ui/: catalog.css  catalog.tsx  desugar.test.ts  desugar.ts  views.test.tsx  views.tsx
src/styles/: theme.css  theme.test.ts  tokens.css  tokens.test.ts
src/tts/: gating.test.ts  gating.ts  normalize.test.ts  normalize.ts  orchestrate.test.ts  orchestrate.ts  speechText.test.ts  speechText.ts  useTtsPlayer.ts
tokens/: tokens.json
(+7 files in other folders)
