[package]
name = "cenno"
version = "0.4.0"
description = "Agent UX runtime — agents ask, you answer"
authors = ["Gleb Kalinin <glebis@gmail.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cenno_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0.6", features = ["build"] }

[dependencies]
# tray-icon: menu-bar presence; image-png: decode the template tray PNG at runtime.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
# Persists/restores window position across restarts (POSITION flag only).
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
# "server" + "macros" power CennoServer; "client" is needed by mcp::test_support
# (always compiled — see the note on that module) and later by the stdio bridge.
rmcp = { version = "1.7", features = ["server", "client", "macros"] }
schemars = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
tauri-plugin-autostart = "2"
# In-app updates from GitHub releases (latest.json endpoint, minisign-verified).
tauri-plugin-updater = "2"
# Native message dialogs for the update flow (a tray app has no other surface
# for "you're up to date" / "install and restart?" feedback).
tauri-plugin-dialog = "2"
# Global keyboard shortcut to reopen a parked/pending prompt (combo configured
# in ~/.cenno/config.json). Registration is Rust-side only — no JS IPC surface.
tauri-plugin-global-shortcut = "2"

# sound-out Supertonic backend (on-device TTS). ort loads the ONNX models;
# the rest are the inference pipeline (vendored from supertone-inc/supertonic,
# MIT) — ndarray math, hound WAV I/O, rustfft, text preprocessing. rodio plays
# the synthesized PCM. All on-device; no network at speak time.
ort = "2.0.0-rc.7"
ndarray = { version = "0.17", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
hound = "3.5"
rustfft = "6.2"
unicode-normalization = "0.1"
regex = "1.10"
rodio = { version = "0.19", default-features = false }
# One-time, user-initiated Supertonic model download (settings). Blocking
# client used on a spawn_blocking thread; rustls to avoid a system-OpenSSL dep.
ureq = { version = "2", features = ["tls"], default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
# Swizzles the main window into a non-activating NSPanel. Rev is the tip of
# branch `v2` (Tauri 2.x); pinned by rev so the pin survives lockfile churn.
# (Cargo forbids specifying both `branch` and `rev`.)
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "18ffb9a201fbf6fedfaa382fd4b92315ea30ab1a" }
# Fullscreen detection: CGWindowList + CGDisplay bounds heuristic
# (suppress.rs). Both crates are already in tauri's macOS dep tree.
core-graphics = "0.25"
core-foundation = "0.10"
# voice_text dictation: a Swift module (src-tauri/swift) wraps Apple's
# SpeechAnalyzer/SpeechTranscriber (macOS 26+, long-form on-device). swift-rs
# compiles + links it; voice.rs calls its @_cdecl entry points.
swift-rs = "1.0.6"

[dev-dependencies]
tempfile = "3"

